changed back to java 8 to use docker alpine image